# whisper-dictate

./: .env.example  .gitignore  README.md  config.py  environment.yml  pyproject.toml  run.sh  whisper_flow_client.py
tests/: conftest.py
tests/examples/: mic_transcribe.py
tests/integration/: test_audio_alerts.py  test_audio_recorder.py
tests/legacy/: conftest.py
tests/unit/: test_audio_alerts.py  test_config.py  test_text_typer.py  test_transcription_backend.py
whisper_dictate/: __init__.py  __main__.py  client.py  config.py
whisper_dictate/audio/: alerts.py  recorder.py
whisper_dictate/transcription/: base.py  openai_backend.py
whisper_dictate/typing/: text_typer.py
whisperflow/audio/: alerts.py  recorder.py
whisperflow/typing/: text_typer.py
